footer fixing alignment and spacing `justify: space-between`

--- a/assets/stylus/components/footer.styl
+++ b/assets/stylus/components/footer.styl
@@ -1,7 +1,7 @@
 .Footer-container
   margin 0 auto
   max-width 1440px
-  padding 55px 0px
+  padding 55px 40px
 
 
   
